Revert "replaced 'new URL' to 'new URI' per Java 11 target codebase"
This reverts commit aeef4c1e4bb57a4832dbe368920aa0716a3f68e7.