@@ -83,7 +83,7 @@ public class ZipExtractionInstaller extends ToolInstaller {
     @Override
     public FilePath performInstallation(ToolInstallation tool, Node node, TaskListener log) throws IOException, InterruptedException {
         FilePath dir = preferredLocation(tool, node);
-        if (dir.installIfNecessaryFrom(new URI(url), log, "Unpacking " + url + " to " + dir + " on " + node.getDisplayName())) {
+        if (dir.installIfNecessaryFrom(new URL(url), log, "Unpacking " + url + " to " + dir + " on " + node.getDisplayName())) {
             dir.act(new ChmodRecAPlusX());
         }
         if (subdir == null) {
